--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.11.1",
-    "@prisma/client": "^6.19.0",
-    "next": "15.1.0",
-    "next-auth": "^5.0.0-beta.30",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@auth/prisma-adapter": "2.11.1",
+    "@prisma/client": "6.19.0",
+    "next": "^15.5.7",
+    "next-auth": "5.0.0-beta.30",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "eslint": "^9.0.0",
+    "@tailwindcss/postcss": "4.0.0",
+    "@types/node": "20.17.10",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1",
+    "eslint": "^9.39.1",
     "eslint-config-next": "15.1.0",
-    "prisma": "^6.19.0",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.0.0"
+    "prisma": "6.19.0",
+    "tailwindcss": "4.0.0",
+    "typescript": "5.7.2"
   }
 }
