--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "2.11.1",
     "@prisma/client": "6.19.0",
-    "next": "^15.5.7",
+    "next": "15.1.0",
     "next-auth": "5.0.0-beta.30",
     "react": "19.0.0",
     "react-dom": "19.0.0"
@@ -22,7 +22,7 @@
     "@types/node": "20.17.10",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
-    "eslint": "^9.39.1",
+    "eslint": "9.16.0",
     "eslint-config-next": "15.1.0",
     "prisma": "6.19.0",
     "tailwindcss": "4.0.0",
